--- a/src/jsMain/resources/worklet.css
+++ b/src/jsMain/resources/worklet.css
@@ -1,4 +1,14 @@
+.button_div {
+    margin: 1em;
+}
+
 .button {
     padding: 3px 5px;
-    background-color: red;
+    background-color: #2c008f;
+    color: white;
+    font-size: large;
+}
+
+input {
+    margin: 1em;
 }
