--- a/src/jsMain/resources/worklet.css
+++ b/src/jsMain/resources/worklet.css
@@ -1,14 +1,21 @@
+body {
+    font-size: x-large;
+    margin: 2em;
+}
+
 .button_div {
-    margin: 1em;
+    margin: 0.5em;
 }
 
 .button {
     padding: 3px 5px;
     background-color: #2c008f;
     color: white;
-    font-size: large;
+    font-size: xx-large;
+    margin: 0.5em;
 }
 
 input {
     margin: 1em;
+    font-size: x-large;
 }
